[package]
name = "sudoku-ffi"
version = "0.2.0"
authors = ["Emerentius <emerentius@arcor.de>"]
readme = "README.md"
license = "MIT/Apache2"

[dependencies]
libc = "0.2.41"

[dependencies.sudoku]
version = "0.6.2"
git = "https://github.com/emerentius/sudoku"
rev = "58a18d50bad359846d4c2d9f862398772a0c20d1"

[lib]
crate-type = ["cdylib", "staticlib"]
