[package]
name = "sudoku-ffi"
version = "0.2.0"
authors = ["Emerentius <emerentius@arcor.de>"]
readme = "README.md"
license = "MIT/Apache2"

[dependencies]
libc = "0.2.41"

[dependencies.sudoku]
version = "0.6.2"
git = "https://github.com/emerentius/sudoku"
rev = "948fcf4e8d4ff94c5514f0279d6728dcfa27f069"

[lib]
crate-type = ["cdylib", "staticlib"]
