[package]
name = "sudoku-ffi"
version = "0.3.0"
authors = ["Emerentius <emerentius@arcor.de>"]
readme = "README.md"
license = "MIT/Apache2"

[dependencies]
libc = "0.2.41"

[dependencies.sudoku]
version = "0.7.0"
git = "https://github.com/emerentius/sudoku"
rev = "badea560ff59122ce98f03a33b3e6a51f78477db"

[lib]
crate-type = ["cdylib", "staticlib"]
